fixing social links on mobile

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6163,7 +6163,7 @@ a {
     #header .nav .social-links {
       display: flex;
       margin-left: 1rem; }
-      @media (max-width: 992px) {
+      @media (max-width: 544px) {
         #header .nav .social-links {
           width: 100%;
           margin-top: 2rem;
@@ -6171,15 +6171,15 @@ a {
           padding-top: 1rem;
           border-top: solid 1px rgba(255, 255, 255, 0.7);
           align-items: center;
-          justify-content: center; } }
-      #header .nav .social-links .social {
-        border: solid 1px rgba(255, 255, 255, 0.1); }
-        #header .nav .social-links .social.facebook:before {
-          background: no-repeat 9px 9px url(/images/icons/facebook_white.svg);
-          background-size: 20px; }
-        #header .nav .social-links .social.twitter:before {
-          background: no-repeat 9px 9px url(/images/icons/twitter_white.svg);
-          background-size: 20px; }
+          justify-content: center; }
+          #header .nav .social-links .social {
+            border: solid 1px rgba(255, 255, 255, 0.3); }
+            #header .nav .social-links .social.facebook:before {
+              background: no-repeat 9px 9px url(/images/icons/facebook_white.svg);
+              background-size: 20px; }
+            #header .nav .social-links .social.twitter:before {
+              background: no-repeat 9px 9px url(/images/icons/twitter_white.svg);
+              background-size: 20px; } }
 
 .footer {
   position: relative;
